# cgrep

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/tapes/: bookmarks.tape  copy-url.tape  demo.tape  filter-panel.tape  help.tape  history.tape  parallel-search.tape  preview.tape  search-bar.tape  tabs.tape  travolta.tape
src/: app.rs  config.rs  event.rs  main.rs
src/confluence/: client.rs  mod.rs  models.rs  search.rs
src/gerrit/: client.rs  models.rs  search.rs
src/jira/: client.rs  models.rs  search.rs
src/storage/: bookmarks.rs  history.rs  mod.rs  tabs.rs
src/ui/: bookmark_panel.rs  filter_panel.rs  history_panel.rs  layout.rs  mod.rs  preview.rs  result_list.rs  search_bar.rs  status_bar.rs  tab_bar.rs  travolta.rs
