[package]
name = "cgrep"
version = "0.10.0"
edition = "2021"
description = "Confluence + Jira + Gerrit 横断 grep TUI ツール"
license = "MIT"
repository = "https://github.com/nigoh/cgrep"
homepage = "https://github.com/nigoh/cgrep"
keywords = ["tui", "confluence", "jira", "gerrit", "search"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cgrep"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
ratatui        = "0.29"
crossterm      = { version = "0.28", features = ["event-stream"] }
tokio          = { version = "1", features = ["full"] }
reqwest        = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
html2text      = "0.12"
base64         = "0.22"
anyhow         = "1"
arboard        = "3"
dirs           = "5"
futures        = "0.3"
tokio-util     = { version = "0.7", features = ["time"] }

[dev-dependencies]
mockito        = "1"
tokio-test     = "0.4"
tempfile       = "3"
